administration/overlays/admin-deployment-namespace.yml
apiVersion: apps/v1
kind: Namespace
metadata:
  name: admin-test-override-namespace
